--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,13 @@
 <resources>
     <dimen name="height_56">56dp</dimen>
     <dimen name="height_230">230dp</dimen>
+    <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="corner_radius_4">4dp</dimen>
     <dimen name="height_170">170dp</dimen>
+    <dimen name="height_200">200dp</dimen>
     <dimen name="txt_size_32">30sp</dimen>
+    <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_24">24dp</dimen>
 </resources>
