--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -23,6 +23,7 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:padding="@dimen/padding_16"
+        android:orientation="vertical"
         android:scrollbars="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
