--- a/app/src/main/res/layout/layout_item_child_details.xml
+++ b/app/src/main/res/layout/layout_item_child_details.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imgItemCategory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/height_140"
+        android:layout_height="@dimen/height_140"
         android:layout_marginHorizontal="@dimen/margin_4"
         android:importantForAccessibility="no"
         android:scaleType="centerCrop"
