--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="corner_radius_4">4dp</dimen>
+    <dimen name="height_150">150dp</dimen>
     <dimen name="height_170">170dp</dimen>
     <dimen name="height_200">200dp</dimen>
     <dimen name="txt_size_32">30sp</dimen>
