--- a/app/src/main/res/layout/layout_view_shimmer_details.xml
+++ b/app/src/main/res/layout/layout_view_shimmer_details.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding_16"
+    android:id="@+id/shimmerDetailHeroes"
     app:shimmer_repeat_mode="restart"
     app:shimmer_shape="radial">
 
