--- a/app/src/main/res/layout/fragment_heroes.xml
+++ b/app/src/main/res/layout/fragment_heroes.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.ui.fragments.heroes.HeroesFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutShimmer"
+        android:id="@+id/layoutShimmerHeroes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:focusable="true"
@@ -51,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layoutShimmer"
+        app:layout_constraintTop_toBottomOf="@+id/layoutShimmerHeroes"
         tools:listitem="@layout/layout_item_heroes" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
