--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="height_30">30dp</dimen>
     <dimen name="height_56">56dp</dimen>
     <dimen name="height_140">140dp</dimen>
     <dimen name="height_230">230dp</dimen>
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
     <dimen name="corner_radius_4">4dp</dimen>
     <dimen name="height_150">150dp</dimen>
     <dimen name="height_170">170dp</dimen>
