--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="height_30">30dp</dimen>
+    <dimen name="height_40">40dp</dimen>
     <dimen name="height_56">56dp</dimen>
     <dimen name="height_140">140dp</dimen>
     <dimen name="height_230">230dp</dimen>
