--- a/app/src/main/res/navigation/nav_graph_heroes.xml
+++ b/app/src/main/res/navigation/nav_graph_heroes.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_open_detailsFragment"
             app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_heroesFragment_to_sortFragment"
+            app:destination="@id/sortFragment" />
     </fragment>
 
     <fragment
@@ -29,4 +32,9 @@
             android:name="detailsHeroesArg"
             app:argType="com.marcelo.marvelheroes.domain.model.DetailsHeroesArgViewData" />
     </fragment>
+
+    <dialog
+        android:id="@+id/sortFragment"
+        android:name="com.marcelo.marvelheroes.presentation.ui.fragments.sort.SortHeroesFragment"
+        tools:layout="@layout/fragment_sort_heroes" />
 </navigation>
