--- a/app/src/main/res/menu/item_sort_heroes_menu.xml
+++ b/app/src/main/res/menu/item_sort_heroes_menu.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/searchHeroes"
+        android:icon="@drawable/ic_search"
+        android:title="@string/item_menu_search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always|collapseActionView" />
+
+    <item
         android:id="@+id/sortHeroes"
         android:icon="@drawable/ic_sort"
         android:title="@string/item_menu_sort"
